--- a/src/app/theme/layout/admin/navigation/nav-logo/nav-logo.component.html
+++ b/src/app/theme/layout/admin/navigation/nav-logo/nav-logo.component.html
@@ -1,9 +1,9 @@
 <div class="navbar-brand header-logo">
   <a [routerLink]="['/dashboard/default/']" class="b-brand">
-    <div>
-      <img src="assets/images/xcash_logo.png" alt="xcash logo" width="35px" height="35px">
-    </div>
-    <span class="b-title" style="font-weight:bold">X-CASH</span>
+    <!-- <div> -->
+      <img src="assets/images/xcash-logo-rounded.png" alt="xcash logo" width="35px" height="35px">
+    <!-- </div> -->
+    <!-- <span class="b-title" style="font-weight:bold">X-Cash</span> -->
   </a>
   <a href="javascript:" class="mobile-menu" [ngClass]="{'on' : navCollapsed}" id="mobile-collapse" (click)="navCollapse()"><span></span></a>
 </div>
