--- a/src/scss/layout/_dark.scss
+++ b/src/scss/layout/_dark.scss
@@ -1245,6 +1245,7 @@ body.datta-dark {
 
        .b-title{
            color: #fff;
+           font-weight: 700;
        }
        .dropdown-menu {
            color: $theme-font-color;
