--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -35,12 +35,12 @@ $Menu-collapsed-width: 80px;
 // temp variables
 $theme-color: linear-gradient(-135deg, #1de9b6 0%, #1dc4e9 100%);
 $theme-color2: linear-gradient(-135deg, #899FD4 0%, #A389D4 100%);
-$primary-color: #04a9f5;
+$primary-color: rgb(250, 116, 28); //#04a9f5;
 $warning-color: #f4c22b;
 $danger-color: #f44236;
 $success-color: #1de9b6;
 $purple-color: #a389d4;
-$info-color: #3ebfea;
+$info-color: rgb(250, 116, 28); //#3ebfea;
 $secondary-color: #748892;
 $default-color: #d6d6d6;
 $light-color: #f2f2f2;
@@ -61,7 +61,7 @@ $menu-dark-background: #3f4d67;
 $menu-dark-text-color: #a9b7d0;
 $menu-light-background: #fff;
 $menu-light-text-color: #3f4d67;
-$menu-active-color: #04a9f5;
+$menu-active-color: rgb(250, 116, 28); //#04a9f5;
 
 // dark layout colors
 $dark-layout: #212224;
@@ -72,7 +72,7 @@ $dark-layout-font: #adb7be;
 $menu-icon-color: $primary-color, #ff5252, #01a9ac ,#9575CD , #23b7e5, $warning-color;
 // Header background
 $color-header-name: blue, red, purple, lightblue, dark;
-$color-header-color: $primary-color, #ff5252, #9575CD ,#23b7e5,lighten($dark-layout,7%);
+$color-header-color: $primary-color, rgb(250, 116, 28), #9575CD ,#23b7e5,lighten($dark-layout,7%);
 // Menu background
 $color-menu-name: blue, red, purple, lightblue, dark;
 $color-menu-color: $primary-color, #ff5252, #9575CD ,#23b7e5,lighten($dark-layout,7%);
@@ -83,7 +83,7 @@ $color-active-color: $primary-color, #ff5252, #9575CD ,#23b7e5,lighten($dark-lay
 $color-title-name: blue, red, purple, lightblue, dark;
 $color-title-color: $primary-color, #ff5252, #9575CD ,#23b7e5,lighten($dark-layout,7%);
 
-$theme-font-family: 'Open Sans', sans-serif;
+$theme-font-family: 'Raleway', sans-serif;
 $theme-font-size: 14px;
 $theme-background: #f4f7fa;
 $theme-font-color: #888;
