--- a/src/scss/fonts/fontawesome/scss/_variables.scss
+++ b/src/scss/fonts/fontawesome/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Variables
 // --------------------------
 
-$fa-font-path:                "scss/fonts/fontawesome/webfonts" !default;
+$fa-font-path:                "../webfonts/" !default;
 $fa-font-size-base:           16px !default;
 $fa-css-prefix:               fa !default;
 $fa-version:                  "5.3.1" !default;
