--- a/src/scss/theme-elements/_theme-elements.scss
+++ b/src/scss/theme-elements/_theme-elements.scss
@@ -1,15 +1,15 @@
-@import "alert";
-@import "authentication";
-@import "breadcrumb-pagination";
-@import "button";
-@import "data-tables";
-@import "form";
-@import "gallery";
-@import "labels-badges";
-@import "modal";
-@import "nav";
-@import "popover";
-@import "progress";
-@import "radiobox-checkbox";
-@import "tooltip";
-@import "task-board";
+@use "alert";
+@use "authentication";
+@use "breadcrumb-pagination";
+@use "button";
+@use "data-tables";
+@use "form";
+@use "gallery";
+@use "labels-badges";
+@use "modal";
+@use "nav";
+@use "popover";
+@use "progress";
+@use "radiobox-checkbox";
+@use "tooltip";
+@use "task-board";
