--- a/src/scss/theme-elements/_data-tables.scss
+++ b/src/scss/theme-elements/_data-tables.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 /**  =====================
       Data Tables css start
 ==========================  **/
@@ -33,7 +34,7 @@
 
 .custom-table-striped {
     tbody tr:nth-of-type(2n+1) {
-        background-color: transparentize($primary-color,0.95);
+        background-color: color.adjust($primary-color,$alpha: -0.95);
     }
 }
 // Hover effect
@@ -41,7 +42,7 @@
 .custom-table-hover {
     tbody tr {
         &:hover {
-            background-color: transparentize($primary-color,0.95);
+            background-color: color.adjust($primary-color,$alpha: -0.95);
         }
     }
 }
@@ -52,7 +53,7 @@
         th {
             color: #fff;
             background-color: $dark-color;
-            border-color: darken($dark-color,10%);
+            border-color: color.adjust($dark-color,$lightness: -10%);
         }
     }
 }
@@ -64,19 +65,19 @@
     td,
     th,
     thead th {
-        border-color: darken($dark-color,10%);
+        border-color: color.adjust($dark-color,$lightness: -10%);
     }
 
     &.custom-table-striped {
         tbody tr:nth-of-type(odd) {
-            background-color: darken($dark-color,2%);
+            background-color: color.adjust($dark-color,$lightness: -2%);
         }
     }
 
     &.custom-table-hover {
         tbody tr {
             &:hover {
-                background-color: darken($dark-color,5%);
+                background-color: color.adjust($dark-color,$lightness: -5%);
             }
         }
     }
