--- a/src/scss/theme-elements/_labels-badges.scss
+++ b/src/scss/theme-elements/_labels-badges.scss
@@ -1,3 +1,4 @@
+@use "sass:list";
 /**  =====================
       Label & Badges css start
 ==========================  **/
@@ -9,10 +10,10 @@
     margin-right: 5px;
     margin-bottom: 5px;
     @each $value in $color-bt-name {
-        $i: index($color-bt-name, $value);
+        $i: list.index($color-bt-name, $value);
 
         &.label-#{$value}{
-            background: nth($color-bt-color,$i);
+            background: list.nth($color-bt-color,$i);
             color: #ffffff;
         }
     }
