--- a/src/scss/theme-elements/_progress.scss
+++ b/src/scss/theme-elements/_progress.scss
@@ -1,3 +1,4 @@
+@use "sass:list";
 /**  =====================
       Progress css start
 ==========================  **/
@@ -23,10 +24,10 @@
     background-color: $primary-color;
     box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.3);
     @each $value in $color-name {
-        $i: index($color-name, $value);
+        $i: list.index($color-name, $value);
 
         &.progress-#{$value} {
-            background: nth($color-color,$i),;
+            background: list.nth($color-color,$i),;
         }
         &.progress-c-theme {
             background: $theme-color;
