fix: sass errors due migration

--- a/src/scss/_generic.scss
+++ b/src/scss/_generic.scss
@@ -2,6 +2,8 @@
       Generic-class css start
 ========================== **/
 /*====== Padding , Margin css starts ======*/
+@import 'variables';
+
 $i: 0;
 @while $i<=50 {
     .p {
