--- a/src/scss/fonts/fontawesome/scss/_animated.scss
+++ b/src/scss/fonts/fontawesome/scss/_animated.scss
@@ -1,5 +1,6 @@
 // Animated Icons
 // --------------------------
+@import 'variables';
 
 .#{$fa-css-prefix}-spin {
   animation: fa-spin 2s infinite linear;
