--- a/src/scss/fonts/fontawesome/scss/_bordered-pulled.scss
+++ b/src/scss/fonts/fontawesome/scss/_bordered-pulled.scss
@@ -1,5 +1,6 @@
 // Bordered & Pulled
 // -------------------------
+@import 'variables';
 
 .#{$fa-css-prefix}-border {
   border: solid .08em $fa-border-color;
