--- a/src/scss/mixins/_alert.scss
+++ b/src/scss/mixins/_alert.scss
@@ -1,4 +1,6 @@
 @use "sass:color";
+@use '../variables';
+
 @mixin alert-variant($background, $border, $color) {
     color: $color;
     border-color: $border;
