--- a/src/scss/other/_other.scss
+++ b/src/scss/other/_other.scss
@@ -1,10 +1,10 @@
-@import "chat";
-@import "prism";
-@import "toolbar";
-@import "sticky";
-@import "switches";
-@import "wizard";
-@import "chart";
-@import "icon-lauouts";
-@import "calendar";
-@import "file-upload";
+@use "chat";
+@use "prism";
+@use "toolbar";
+@use "sticky";
+@use "switches";
+@use "wizard";
+@use "chart";
+@use "icon-lauouts";
+@use "calendar";
+@use "file-upload";
