--- a/src/scss/theme-elements/_alert.scss
+++ b/src/scss/theme-elements/_alert.scss
@@ -1,9 +1,13 @@
-@use "../mixins/alert"; /**  =====================
+/**  =====================
       Alert css start
 ==========================  **/
 //
 // Base styles
 //
+@use "../mixins/alert";
+@use "../mixins/function";
+@use '../variables';
+@use "sass:color";
 
 .alert {
     position: relative;
@@ -26,9 +30,12 @@
 // Alternate styles
 //
 // Generate contextual modifier classes for colorizing the alert.
-@each $color, $value in $theme-colors {
+@each $color, $value in variables.$theme-colors {
     .alert-#{$color} {
-        @include alert.alert-variant(theme-color-level($color, $alert-bg-level), theme-color-level($color, $alert-border-level), theme-color-level($color, $alert-color-level));
+        @include alert.alert-variant(function.theme-color-level( $color, variables.$alert-bg-level),
+                                     function.theme-color-level( $color, variables.$alert-border-level),
+                                     function.theme-color-level( $color, variables.$alert-color-level)
+                                    );
     }
 }
 /**====== Alert css end ======**/
