--- a/src/scss/theme-elements/_authentication.scss
+++ b/src/scss/theme-elements/_authentication.scss
@@ -1,6 +1,8 @@
 /**  =====================
       Authentication css start
 ==========================  **/
+@import '../variables';
+
 .auth-wrapper {
     position: relative;
     display: flex;
