--- a/src/scss/theme-elements/_breadcrumb-pagination.scss
+++ b/src/scss/theme-elements/_breadcrumb-pagination.scss
@@ -2,6 +2,7 @@
       Breadcrumbs & Pagination css start
 ==========================  **/
 // Breadcrumbs
+@import '../variables';
 
 .breadcrumb {
     background-color: $theme-background;
