--- a/src/scss/theme-elements/_button.scss
+++ b/src/scss/theme-elements/_button.scss
@@ -2,6 +2,7 @@
 /**  =====================
       Button css start
 ==========================  **/
+@import '../variables';
 
 .btn-theme,
 a.btn-theme {
