--- a/src/scss/theme-elements/_data-tables.scss
+++ b/src/scss/theme-elements/_data-tables.scss
@@ -2,6 +2,7 @@
 /**  =====================
       Data Tables css start
 ==========================  **/
+@import '../variables';
 
 .custom-table {
     td,
