--- a/src/scss/theme-elements/_form.scss
+++ b/src/scss/theme-elements/_form.scss
@@ -1,6 +1,7 @@
 /**  =====================
       Form Componant css start
 ==========================  **/
+@import '../variables';
 
 .custom-select,
 .form-control {
