--- a/src/scss/theme-elements/_progress.scss
+++ b/src/scss/theme-elements/_progress.scss
@@ -2,6 +2,8 @@
 /**  =====================
       Progress css start
 ==========================  **/
+@import '../variables';
+
 @keyframes progress-bar-stripes {
     from {
         background-position: 16px 0;
