--- a/src/scss/theme-elements/_radiobox-checkbox.scss
+++ b/src/scss/theme-elements/_radiobox-checkbox.scss
@@ -1,4 +1,5 @@
 @use "sass:list";
+@import '../variables';
 /**  =====================
       Radio & Checked css start
 ==========================  **/
