--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+@use "sass:map";
 // =======================================
 //     List of variables for layout
 // =======================================
@@ -72,16 +74,16 @@ $dark-layout-font: #adb7be;
 $menu-icon-color: $primary-color, #ff5252, #01a9ac ,#9575CD , #23b7e5, $warning-color;
 // Header background
 $color-header-name: blue, red, purple, lightblue, dark;
-$color-header-color: $primary-color, #ff5252, #9575CD ,#23b7e5,lighten($dark-layout,7%);
+$color-header-color: $primary-color, #ff5252, #9575CD ,#23b7e5,color.adjust($dark-layout,$lightness: 7%);
 // Menu background
 $color-menu-name: blue, red, purple, lightblue, dark;
-$color-menu-color: $primary-color, #ff5252, #9575CD ,#23b7e5,lighten($dark-layout,7%);
+$color-menu-color: $primary-color, #ff5252, #9575CD ,#23b7e5,color.adjust($dark-layout,$lightness: 7%);
 // Active background color
 $color-active-name: blue, red, purple, lightblue, dark;
-$color-active-color: $primary-color, #ff5252, #9575CD ,#23b7e5,lighten($dark-layout,7%);
+$color-active-color: $primary-color, #ff5252, #9575CD ,#23b7e5,color.adjust($dark-layout,$lightness: 7%);
  // Menu title color
 $color-title-name: blue, red, purple, lightblue, dark;
-$color-title-color: $primary-color, #ff5252, #9575CD ,#23b7e5,lighten($dark-layout,7%);
+$color-title-color: $primary-color, #ff5252, #9575CD ,#23b7e5,color.adjust($dark-layout,$lightness: 7%);
 
 $theme-font-family: 'Open Sans', sans-serif;
 $theme-font-size: 14px;
@@ -97,10 +99,12 @@ $color-bt-name: primary,danger,success,warning,info;
 $color-bt-color: $primary-color,$danger-color,$success-color ,$warning-color ,$info-color; // form-control variables
 $form-bg: #f0f3f6;
 
-$theme-colors: ()
-!default;
+// $theme-colors: () !default;
+// $theme-colors: map.merge(("primary": $primary-color, "secondary": $secondary-color, "success": $success-color, "info": $info-color, "warning": $warning-color, "danger": $danger-color, "light": $light-color, "dark": $dark-color), $theme-colors); // Color contrast
 
-$theme-colors: map-merge(("primary": $primary-color, "secondary": $secondary-color, "success": $success-color, "info": $info-color, "warning": $warning-color, "danger": $danger-color, "light": $light-color, "dark": $dark-color), $theme-colors); // Color contrast
+$theme-colors: ("primary": $primary-color, "secondary": $secondary-color, "success": $success-color, "info": $info-color, "warning": $warning-color, "danger": $danger-color, "light": $light-color, "dark": $dark-color); // Color contrast
+
+
 $yiq-contrasted-threshold: 200 !default;
 $yiq-dark-color: #37474f;
 $yiq-light-color: #fff;
