--- a/src/scss/fonts/fontawesome/scss/_fixed-width.scss
+++ b/src/scss/fonts/fontawesome/scss/_fixed-width.scss
@@ -1,6 +1,7 @@
 // Fixed Width Icons
 // -------------------------
 @use "sass:math";
+@import 'variables';
 
 .#{$fa-css-prefix}-fw {
   text-align: center;
