--- a/src/scss/fonts/fontawesome/scss/_larger.scss
+++ b/src/scss/fonts/fontawesome/scss/_larger.scss
@@ -3,6 +3,7 @@
 
 // makes the font 33% larger relative to the icon container
 @use "sass:math";
+@import 'variables';
 
 .#{$fa-css-prefix}-lg {
   font-size: math.div(4em, 3);
