--- a/src/scss/fonts/fontawesome/scss/_screen-reader.scss
+++ b/src/scss/fonts/fontawesome/scss/_screen-reader.scss
@@ -1,5 +1,5 @@
 // Screen Readers
 // -------------------------
-
-.sr-only { @include sr-only; }
-.sr-only-focusable { @include sr-only-focusable; }
+@use 'mixins';
+.sr-only { @include mixins.sr-only; }
+.sr-only-focusable { @include mixins.sr-only-focusable; }
