--- a/src/scss/other/_sticky.scss
+++ b/src/scss/other/_sticky.scss
@@ -1,3 +1,6 @@
+@use "sass:color";
+@use "../variables";
+
 /**  =====================
       Sticky Notes css start
 ==========================  **/
@@ -79,7 +82,7 @@
 	width: 260px;
 	min-height: 280px;
 	margin: 0 30px 30px 0;
-	background: $theme-color;
+	background: variables.$theme-color;
 	box-shadow: 7px 10px 20px 0 rgba(0,0,0,0.2);
 	transform: rotate(2deg);
 	transform: skew(-1deg,1deg);
@@ -128,11 +131,11 @@
 	}
 
 	&:nth-child(3n+2) {
-		background: $theme-color2;
+		background: variables.$theme-color2;
 	}
 
 	&:nth-child(3n+3) {
-		background: $primary-color;
+		background: variables.$primary-color;
 	}
 }
 /* Button style  */
@@ -163,16 +166,16 @@
 		width: 30px;
 		height: 30px;
 		border-radius: 50%;
-		background-color: $danger-color;
+		background-color: variables.$danger-color;
 		text-align: center;
 		line-height: 16px;
 		padding: 7px;
-		border-color: darken($danger-color,5%);
+		border-color: color.adjust(variables.$danger-color,$lightness: -5%);
 		font-weight: bolder;
 
 		&:hover {
 			color: #fff;
-			background-color: darken($danger-color,2%);
+			background-color: color.adjust(variables.$danger-color,$lightness: -2%);
 		}
 	}
 }
