--- a/src/scss/theme-elements/_labels-badges.scss
+++ b/src/scss/theme-elements/_labels-badges.scss
@@ -2,6 +2,7 @@
 /**  =====================
       Label & Badges css start
 ==========================  **/
+@import '../variables';
 
 .label {
     padding: 4px 10px;
