--- a/src/scss/theme-elements/_popover.scss
+++ b/src/scss/theme-elements/_popover.scss
@@ -1,6 +1,8 @@
 /**  =====================
       tooltip css start
 ==========================  **/
+@import '../variables';
+
 .popover {
     top: 0;
     left: 0;
