fix: sass paths

--- a/src/scss/plugins/_plugins.scss
+++ b/src/scss/plugins/_plugins.scss
@@ -1,6 +1,6 @@
 @use "sass:meta";
 
-@import "~fullcalendar/dist/fullcalendar.min.css";
+@import "~fullcalendar/main.min.css";
 @import "~ng2-toasty/style-default.css";
 @import "~ng2-toasty/style-bootstrap.css";
 @import "~ng2-toasty/style-material.css";
