--- a/src/scss/theme-elements/_gallery.scss
+++ b/src/scss/theme-elements/_gallery.scss
@@ -305,7 +305,7 @@ figure {
             left: 0;
             width: 100%;
             height: 100%;
-            background: url(assets/images/hover-effect/triangle.svg) no-repeat center center;
+            background: url("~assets/images/hover-effect/triangle.svg") no-repeat center center;
             background-size: 100% 100%;
             content: '';
             transition: opacity 0.45s, transform 0.45s;
@@ -545,7 +545,7 @@ figure {
             left: 0;
             width: 100%;
             height: 100%;
-            background: url("assets/images/hover-effect/triangle2.svg") no-repeat center center;
+            background: url("~assets/images/hover-effect/triangle2.svg") no-repeat center center;
             background-size: 100% 112%;
             content: '';
             transition: opacity 0.35s, transform 0.35s;
