--- a/src/app/modules/wallet-dashboard/import-wallet-modal/import-wallet-modal.component.html
+++ b/src/app/modules/wallet-dashboard/import-wallet-modal/import-wallet-modal.component.html
@@ -1,18 +1,19 @@
 <!-- import wallet modal 1/2 - Choose way of import  -->
 <app-ui-modal #importWalletModal1 dialogClass="modal-dialog-centered" containerClick="false">
   <div class="app-modal-header">
-    
+
     <h5 class="modal-title">Import wallet</h5>
     <button type="button" class="close basic-close" data-dismiss="modal" aria-label="Close" (click)="importWalletModal1.hide()"><span aria-hidden="true">&times;</span></button>
-    
+
   </div>
   <div class="app-modal-body">
-    
+
     <div class="pb-3">
-      <ngb-tabset type='pills' justify='center' [activeId]="activeTab" (tabChange)="activeTab = $event.nextId"> 
-        
-        <ngb-tab title="Mnemonic seed" id="mnemonicSeedTab">
-          <ng-template ngbTabContent>
+
+      <nav ngbNav #importwalletTabSet="ngbNav" justify='center' (navChange)="activeTab = $event.nextId" [activeId]="activeTab">
+        <ng-container ngbNavItem>
+          <a ngbNavLink  title="Mnemonic seed" id="mnemonicSeedTab">Mnemonic seed</a>
+          <ng-template ngbNavContent>
             <form [formGroup]="importMnemonicSeedForm" id="importMnemonicSeedForm" (ngSubmit)="onSubmitMnemonicSeed()">
               <div class="form-group">
                 <label for="import-mnemonic-seed">Mnemonic seed</label>
@@ -25,10 +26,10 @@
               </div>
             </form>
           </ng-template>
-        </ngb-tab>
-        
-        <ngb-tab title="Private key" id="privateSendKeyTab">
-          <ng-template ngbTabContent>
+        </ng-container>
+        <ng-container ngbNavItem>
+          <a ngbNavLink  title="Private key">Private k id="privateSendKeyTab"ey</a>
+          <ng-template ngbNavContent>
             <form [formGroup]="importPrivateSendKeyForm" id="importPrivateSendKeyForm" (ngSubmit)="onSubmitPrivateSendKey()">
               <div class="form-group">
                 <label for="import-private-send-key">Private key restore</label>
@@ -57,22 +58,23 @@
               </div>
             </form>
           </ng-template>
-        </ngb-tab>
-        
-        <ngb-tab title="Key file" id="keyFileTab">
-          <ng-template ngbTabContent>
+        </ng-container>
+        <ng-container ngbNavItem>
+          <a ngbNavLink  title="Key file" id="keyFileTab">Key file</a>
+          <ng-template ngbNavContent>
             <div class="custom-file">
               <input type="file" class="custom-file-input" id="validatedCustomFile" required>
               <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
               <small id="import-private-key-help" class="form-text text-muted">This is not implemented yet.</small>
             </div>
           </ng-template>
-        </ngb-tab>
-        
-      </ngb-tabset> 
+        </ng-container>
+      </nav>
+      <div [ngbNavOutlet]="importwalletTabSet" class="mt-2"></div>
+
     </div>
   </div>
-  
+
   <div class="app-modal-footer">
     <button *ngIf="activeTab === 'mnemonicSeedTab'" class="btn btn-primary text-center" form="importMnemonicSeedForm">Continue</button>
     <button *ngIf="activeTab === 'privateSendKeyTab'" class="btn btn-primary text-center" form="importPrivateSendKeyForm">Continue</button>
@@ -81,27 +83,24 @@
 
 <app-ui-modal #importWalletModalError dialogClass="modal-dialog-centered" containerClick="false">
   <div class="app-modal-header">
-    
+
     <h5 class="modal-title">Import wallet</h5>
-    
+
   </div>
   <div class="app-modal-body">
-    
+
     {{data}}
     <br><br>
     <div class="progress">
         <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width.%]="progress"></div>
       </div>
   </div>
-  
+
   <div class="app-modal-footer">
-  
+
   </div>
 </app-ui-modal>
 
 <!-- Import wallet 2/2 - name and password -->
 <!-- This operation is shared between create and import modal and has its own component -->
 <app-wallet-name-password-modal #importWalletModal2 modalTitle="Import wallet" createOrImport="import" (onSubmit)="onSubmitNameAndPasswordImportModal($event)" (onBackButton)="onNameAndPasswordBackButton()"></app-wallet-name-password-modal>
-
-
-
